log/build_2026-05-11_14-53-10/jetson_camera/stdout_stderr.log
running egg_info
writing ../../build/jetson_camera/jetson_camera.egg-info/PKG-INFO
writing dependency_links to ../../build/jetson_camera/jetson_camera.egg-info/dependency_links.txt
writing entry points to ../../build/jetson_camera/jetson_camera.egg-info/entry_points.txt
writing requirements to ../../build/jetson_camera/jetson_camera.egg-info/requires.txt
writing top-level names to ../../build/jetson_camera/jetson_camera.egg-info/top_level.txt
package init file 'jetson_camera/motorDrivers/__init__.py' not found (or not a regular file)
reading manifest file '../../build/jetson_camera/jetson_camera.egg-info/SOURCES.txt'
writing manifest file '../../build/jetson_camera/jetson_camera.egg-info/SOURCES.txt'
running build
running build_py
copying jetson_camera/main_qr.py -> /home/jetson/EVC_2/workshops/vision_ws/build/jetson_camera/build/lib/jetson_camera
running install
running install_lib
copying /home/jetson/EVC_2/workshops/vision_ws/build/jetson_camera/build/lib/jetson_camera/main_qr.py -> /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/python3.8/site-packages/jetson_camera
byte-compiling /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/python3.8/site-packages/jetson_camera/main_qr.py to main_qr.cpython-38.pyc
  File "/home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/python3.8/site-packages/jetson_camera/main_qr.py", line 9
    from jetson_camera/motorDrivers.encoderDriver import WheelEncoderDriver
                      ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/python3.8/site-packages/jetson_camera-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/jetson_camera/jetson_camera.egg-info to /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/python3.8/site-packages/jetson_camera-0.0.0-py3.8.egg-info
running install_scripts
Installing QR_node script to /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/jetson_camera
Installing application_node script to /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/jetson_camera
Installing face_tracking_sub script to /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/jetson_camera
Installing main_qr script to /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/jetson_camera
Installing processing_node script to /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/jetson_camera
Installing publisher_node script to /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/jetson_camera
Installing subscriber_node script to /home/jetson/EVC_2/workshops/vision_ws/install/jetson_camera/lib/jetson_camera
writing list of installed files to '/home/jetson/EVC_2/workshops/vision_ws/build/jetson_camera/install.log'
